<resources>
    <string name="app_name">小财神</string>

    <string name="permission_title">不开启相机、存储权限将会关闭小财神，确定不开启吗？</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_phone_password">请输入密码</string>
    <string name="input_phone_password_to">请确认密码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="input_inviter">请输入邀请码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="register_account">注册新账号</string>
    <string name="fine_inviter">联系微信xcs_123456索取邀请码</string>
</resources>
