<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activity_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin30"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            android:paddingLeft="@dimen/margin10"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/textSize16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin10"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/textSize16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_to"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        app:layout_constraintTop_toBottomOf="@+id/ll_password">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_password_to"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_password_to"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin10"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/textSize16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_captcha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        app:layout_constraintTop_toBottomOf="@+id/ll_password_to">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_captcha"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin10"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/textSize16" />

        <Button
            android:id="@+id/btn_captcha"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_captcha_backgroud"
            android:padding="5dp"
            android:text="获取验证码"
            android:textColor="@color/white_f"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_inviter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        app:layout_constraintTop_toBottomOf="@+id/ll_captcha">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_inviter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_inviter"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin10"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/textSize16" />
    </LinearLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/ll_inviter"
        android:id="@+id/tv_find_inviter"
        android:layout_marginTop="@dimen/margin6"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/fine_inviter"
        android:textSize="@dimen/textSize12"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:layout_marginTop="@dimen/margin50"
        android:background="@drawable/btn_backgroud"
        android:text="@string/register"
        android:textColor="@color/white_ff"
        android:textSize="@dimen/textSize18"
        app:layout_constraintTop_toBottomOf="@+id/tv_find_inviter" />


</android.support.constraint.ConstraintLayout>